--- a/src/essentials/styles/basic.scss
+++ b/src/essentials/styles/basic.scss
@@ -77,6 +77,15 @@ header {
 			font-weight: bold;
 			padding: 0.75em 1.25em;
 		}
+		
+		.search-form {
+			margin-left: 0;
+			margin-right: 1em;
+
+			input {
+				width: 6em;
+			}
+		}
 	}
 }
 
